Fix T95738: wrong "Bottom" selection for cone without base

Original patch by @lone_noel with changes by me.

Differential Revision: https://developer.blender.org/D14102